# helicone-router

./: .dockerignore  .env  .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ai-gateway-config.yaml  cargo-dist.md  config.yaml  dist-workspace.toml  fly.toml  render.yaml
crates/bedrock-type/: Cargo.toml
crates/bedrock-type/src/: client.rs  config.rs  error.rs  error_meta.rs  event_receiver.rs  event_stream_serde.rs  lib.rs  main.rs  operation.rs  primitives.rs  protocol_serde.rs  serde_util.rs  types.rs
crates/bedrock-type/src/config/: endpoint.rs  retry.rs  timeout.rs
crates/bedrock-type/src/error/: sealed_unhandled.rs
crates/bedrock-type/src/operation/: apply_guardrail.rs  converse.rs  converse_input.rs  converse_stream.rs  get_async_invoke.rs  invoke_model.rs  invoke_model_with_bidirectional_stream.rs  invoke_model_with_response_stream.rs  list_async_invokes.rs  mod.rs  start_async_invoke.rs
crates/bedrock-type/src/primitives/: event_stream.rs  sealed_enum_unknown.rs
crates/bedrock-type/src/protocol_serde/: shape_any_tool_choice.rs  shape_apply_guardrail.rs  shape_apply_guardrail_input.rs  shape_async_invoke_output_data_config.rs  shape_async_invoke_s3_output_data_config.rs  shape_async_invoke_summary.rs  shape_auto_tool_choice.rs  shape_bidirectional_input_payload_part.rs  shape_cache_point_block.rs  shape_content_block.rs  shape_content_block_delta.rs  shape_converse.rs  shape_converse_input.rs  shape_converse_stream.rs  shape_converse_stream_input.rs  shape_converse_stream_output.rs  shape_document_block.rs  (+44 more)
npx/: BUILD.md  (+13 more)
(+333 files in other folders)
