[package]
name = "bedrock-type"
rust-version = "1.82.0"


[dependencies]
serde = { workspace = true }
aws-smithy-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true, features = ["client", "http-02x"] }
aws-types = { workspace = true }
aws-smithy-http = { workspace = true, features = ["event-stream"] }